# voice_note

./: .gitignore  README.md  USER_MANUAL.md  gradle.properties  local.properties.template  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama.cpp  llama_jni.c  llama_jni_stub.c
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
ios/: README.md  generate_icon.py  project.yml
ios/SmartBadgeApp/SmartBadgeApp/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/SmartBadgeApp/SmartBadgeApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/SmartBadgeApp/SmartBadgeApp/Core/Service/: RecordingManager.swift
ios/SmartBadgeApp/SmartBadgeApp/UI/Recording/: RecordingViewModel.swift
ios/SmartBadgeApp/SmartBadgeApp/UI/Settings/: SettingsViewModel.swift
ios/SmartBadgeApp/VoiceNote/: Info.plist  SmartBadgeApp.swift
ios/SmartBadgeApp/VoiceNote.xcodeproj/: project.pbxproj
ios/SmartBadgeApp/VoiceNote.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/SmartBadgeApp/VoiceNote/Core/ASR/: FunASRClient.swift
ios/VoiceNote/VoiceNote/: Info.plist  VoiceNote-Bridging-Header.h  VoiceNote.swift
ios/VoiceNote/VoiceNote.xcodeproj/: project.pbxproj
scripts/: download_ios_frameworks.sh  download_models.sh  generate_icon.py  start_funasr.sh  test_funasr.py
(+134 files in other folders)
